# prompt-deck

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  repomix-output.md  requirements.txt
src/prompt_deck/: __init__.py  __main__.py  context_input.py  file_drop_area.py  file_placeholder.py  prompt_deck.py  styles.py
